# python-chmod-reset

./: .travis.yml  README.rst  setup.cfg  tox.ini
chmod_reset/: __init__.py  __main__.py
reset_chmod/: __init__.py  __main__.py  reset_chmod.py
tests/: test_main.py  test_reset_chmod.py
