[metadata]
name = reset_chmod
author = Benoit Seignovert
author-email = reset_chmod@seignovert.fr
summary = Python package to reset right acces on all files, folders and sub-files and folders
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/reset_chmod
license = MIT
keywords = chmod
classifier = 
    Development Status :: 3 - Alpha
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: System
    Topic :: System :: System Shells

[files]
packages =
    reset_chmod

[wheel]
universal = 1

[entry_points]
console_scripts =
    chmod-reset = reset_chmod.__main__:main
