[metadata]
name = chmod_reset
author = Benoit Seignovert
author-email = python@seignovert.fr
summary = Python package to reset right acces on all files, folders and sub-files and folders
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/python-chmod-reset
license = MIT
keywords = chmod
classifier = 
    Development Status :: 3 - Alpha
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: System
    Topic :: System :: System Shells

[files]
packages =
    chmod_reset

[wheel]
universal = 1

[entry_points]
console_scripts =
    chmod-reset = chmod_reset.__main__:main
